# ic-cadeira

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cadeira/lib/cadeira/: controlador_lidar
install/cadeira/share/ament_index/resource_index/package_run_dependencies/: cadeira
install/cadeira/share/ament_index/resource_index/parent_prefix_path/: cadeira
install/cadeira/share/cadeira/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cadeira/share/cadeira/cmake/: cadeiraConfig-version.cmake  cadeiraConfig.cmake
install/cadeira/share/cadeira/config/: gazebo_params.yaml  joint_controller.yaml
install/cadeira/share/cadeira/description/: cadeira.urdf  cadeira.urdf.xacro  cadeira.xacro  cadeira2.urdf  gazebo_control.xacro  macros_inercia.xacro
install/cadeira/share/cadeira/environment/: ament_prefix_path.dsv  path.dsv
install/cadeira/share/cadeira/launch/: gpt.launch.py  launch_sim.launch.py  rsp.launch.py
log/: latest_build
src/cadeira/: CMakeLists.txt
src/cadeira/config/: gpt_params.yaml  joint_controller.yaml
src/cadeira/description/: cadeira.urdf  cadeira.urdf.xacro  cadeira2.urdf  gazebo_control.xacro  macros_inercia.xacro
src/cadeira/launch/: gpt.launch.py  launch_sim.launch.py  rsp.launch.py
src/cadeira/src/: controlador_lidar.cpp
